Upgrade repository-hdfs to Hadoop 3